--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </style>
   </head>
   <body>
-    <script type="module" src="src/game.js"></script>
+    <script src="https://kaboomjs.com/lib/0.6.0/kaboom.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
